--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     },
 
     "require-dev": {
-        "satooshi/php-coveralls": "dev-master"
+        "phpunit/phpunit": "4.1.3"
     },
 
     "suggest": {
