--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,13 @@
         }
     ],
 
+    "repositories": [
+		{
+			"type": "git",
+			"url": "https://github.com/ionux/phactor.git"
+		}
+	],
+
     "support": {
         "issues": "https://github.com/ionux/phactor/issues",
         "email": "rich.l.morgan@gmail.com",
@@ -21,27 +28,27 @@
 
     "autoload": {
         "psr-4": {
-            "": "src/"
+            "Phactor\\": "src/"
+        }
+    },
+
+    "autoload-dev": {
+        "psr-4": {
+            "Phactor\\": "src/"
         }
     },
 
     "require": {
-        "php": ">=5.4",
+        "php": ">=5.4.0",
         "ext-bcmath": "*",
         "ext-openssl": "*"
     },
 
     "require-dev": {
-        "phpunit/phpunit": "4.1.3"
+        "phpunit/phpunit": "4.5.5"
     },
 
     "suggest": {
         "ext-gmp": "Highest performing math library and preferred for this library's Elliptic Curve calculations."
-    },
-
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0.x-dev"
-        }
     }
 }
