--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: php
 
 php:
-  - 5.4
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
 
 before_script:
@@ -19,3 +19,4 @@ matrix:
   fast_finish: true
   allow_failures:
       - php: hhvm
+      - php: 7.0
