--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,5 @@
 .travis.yml export-ignore
 build.xml export-ignore
 composer.json export-ignore
+composer.lock export-ignore
 phpunit.xml.dist export-ignore
