--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: php
 php:
   - 5.6
   - 7.0
+  - 7.1
   - hhvm
 
 before_script:
@@ -19,3 +20,4 @@ matrix:
   allow_failures:
       - php: hhvm
       - php: 7.0
+      - php: 7.1
