--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
 
 script:
   - mkdir -p build/logs
-  - phpunit tests
+  - ./vendor/bin/phpunit tests
 
 matrix:
   fast_finish: true
