--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -3,10 +3,10 @@ name: PHP Test Suite
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   test:
