--- a/composer.json
+++ b/composer.json
@@ -34,12 +34,15 @@
         }
     },
     "require": {
-        "php": ">=5.6.0",
+        "php": ">=7.4",
         "ext-bcmath": "*",
         "ext-openssl": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7.9"
+        "phpunit/phpunit": "^9.5",
+	"ext-gmp": "*",
+        "ext-bcmath": "*",
+        "ext-openssl": "*"    
     },
     "suggest": {
         "ext-gmp": "Highest performing math library and preferred for this library's Elliptic Curve calculations."
