--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: ['7.4', '8.0', '8.1']
+        php: ['7.4', '8.0', '8.1', '8.2', '8.4', '8.4']
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -21,8 +21,8 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1' # Adjust PHP version as needed
-          extensions: openssl, mbstring, gmp, bcmath # Add necessary PHP extensions
+          php-version: '8.4'
+          extensions: openssl, mbstring, gmp, bcmath
 
       - name: Install dependencies
         run: composer install --no-progress --no-suggest
